--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-{% comment %} <!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Copyright 2018 Reiichiro Nakano All Rights Reserved.
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -472,4 +472,4 @@ limitations under the License.
   })
 </script>
 </body>
-</html> {% endcomment %}
+</html>
