--- a/index.html
+++ b/index.html
@@ -65,14 +65,7 @@ limitations under the License.
   This site may have problems functioning on mobile devices. 
   Don't worry, you can still read the description below!
 </div>
-<ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
-  <li class="nav-item">
-    <a class="nav-link active" id="stylize-tab" data-toggle="tab" href="#stylize" role="tab" aria-controls="stylize" aria-selected="true">Stylize an image</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="combine-tab" data-toggle="tab" href="#combine" role="tab" aria-controls="combine" aria-selected="false">Combine two styles</a>
-  </li>
-</ul>
+
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="stylize" role="tabpanel" aria-labelledby="stylize-tab">
       <div class="container">
@@ -80,7 +73,7 @@ limitations under the License.
           <div class="col mx-5 my-4">
               <img id="content-img" class="centered" src="images/chicago.jpg" height=256></img>
               <br>
-              <label for="content-img-size">Content image size</label>
+              <label for="content-img-size">元画像イメージサイズ</label>
               <i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" 
               title="A bigger content image results in a more detailed output, but increases the processing time significantly."></i>
               <input type="range" min="256" max="400" value="256" class="custom-range centered" id="content-img-size" >
@@ -100,7 +93,7 @@ limitations under the License.
           <div class="col mx-5 my-4">
               <img id="style-img" class="centered" crossorigin="anonymous" src="images/seaport.jpg" height=256></img>
               <br>
-              <label for="style-img-size">Style image size</label>
+              <label for="style-img-size">合成する画像サイズ</label>
               <i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" 
               title='Changing the size of a style image usually affects the texture "seen" by the network.'></i>
               <input id="style-img-square" type="checkbox" style="vertical-align: middle; float: right;"
