--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ limitations under the License.
           <div class="col mx-5 my-4">
               <img id="content-img" class="centered" src="images/chicago.jpg" height=256></img>
               <br>
-              <label for="content-img-size">元画像サイズ</label>
+              <label for="content-img-size">ベース画像サイズ</label>
               <i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" 
               title="A bigger content image results in a more detailed output, but increases the processing time significantly."></i>
               <input type="range" min="256" max="400" value="256" class="custom-range centered" id="content-img-size" >
               <br>
               <select id="content-select" class="centered custom-select">
-                <option value="" disabled>元画像を選択する</option>
+                <option value="" disabled>ベース画像を選択する</option>
                 <option value="file">画像をアップロードする</option>
                 <option value="stata">stata</option>
                 <option value="diana">diana</option>
