--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ limitations under the License.
     <meta name="twitter:description" content="Paint yourself in the style of any painting, right in the browser." />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/reiinakano/arbitrary-image-stylization-tfjs/master/readme_img/stylize.jpg" />
 
-    <title>Arbitrary Style Transfer in the Browser</title>
+    <title>LOVERY DRAW</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -57,7 +57,7 @@ limitations under the License.
 <!-- As a heading -->
 <div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
     <div class="container">
-      <h4>Arbitrary Style Transfer in the Browser</h1>
+      <a class="navbar-brand" href="http://lovery-bot.com">LOVERY BOT</a>
     </div>
   </div>
 <div class="">
