--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ limitations under the License.
 <!-- As a heading -->
 <div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
     <div class="container">
-      <a class="navbar-brand" href="http://lovery-bot.com">LOVERY BOT</a>
+      <a class="navbar-brand" href="https://lovery-bot.com">LOVERY BOT</a>
     </div>
   </div>
 <div class="">
