--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ limitations under the License.
   </div>
 <div class="">
 <div id="mobile-warning" hidden class="alert alert-warning" role="alert">
-  This site may have problems functioning on mobile devices. 
-  Don't worry, you can still read the description below!
+  モバイルデバイスでは正常に動作しない場合があります。
+  PCでご利用ください
 </div>
 
 <div class="tab-content" id="myTabContent">
