--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ==============================================================================
 -->
-<html lang="en">
+<html lang="ja">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91864013-5"></script>
@@ -56,9 +56,7 @@ limitations under the License.
 <input type="file" id="file-select" style="display: none" accept="image/x-png,image/gif,image/jpeg"/>
 <!-- As a heading -->
 <div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
-    <div class="container">
-      <a class="navbar-brand" href="https://lovery-bot.com">LOVERY BOT</a>
-    </div>
+  <a class="top-link" href="https://lovery-bot.com">LOVERY BOT</a>
   </div>
 <div class="">
 <div id="mobile-warning" hidden class="alert alert-warning" role="alert">
